# qgust

./: .gitignore  LICENSE  README.md  cah-proof.md  implementation_plan.md  pyproject.toml  quantum-gravity-synthesis.md
qgust/: __init__.py  cli.py
qgust/core/: __init__.py  causal_set.py  modular.py
qgust/pred1_entropy_jumps/: __init__.py  run.py
qgust/pred2_central_charge/: __init__.py  run.py
qgust/pred3_gue_statistics/: __init__.py  run.py
qgust/pred4_horizon_molecules/: __init__.py  derivation.md  run.py
qgust/pred5_su2_nogo/: __init__.py  run.py
tests/: test_modular.py
