[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qgust"
version = "0.1.0"
description = "Quantum Gravity Unified Simulation Toolkit"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2",
]

[project.scripts]
qgust = "qgust.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["qgust"]
